--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,6 +7,12 @@ h6 {
   text-wrap: balance;
 }
 
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
 .swiper-slide {
   scale: 0.9;
 }
