about page and home page changes

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -63,3 +63,22 @@ h6 {
 .main-menu ul li a::before {
   content: "";
 }
+
+#ourProducts .swiper-button-wrapper {
+  display: flex;
+  gap: 10px;
+  margin-top: -28px;
+  margin-bottom: 28px;
+  justify-content: center;
+}
+
+#ourProducts .swiper-button-prev,
+#ourProducts .swiper-button-next {
+  position: inherit;
+  background: #e8112b;
+}
+
+#ourProducts .swiper-button-prev:hover,
+#ourProducts .swiper-button-next:hover {
+  background: black;
+}
